--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+ * {
+    overflow-x: hidden;
+ }
+
 }
