--- a/src/components/Herosection/hero.css
+++ b/src/components/Herosection/hero.css
@@ -6,13 +6,14 @@
     font-family: DegularBold;
     src: url("../../assests/Degular\ Bold.otf") format("opentype");
 }
+
 .hero_section{
-    background-image: url(../../assests/Heroblack.gif);
+    background-image: var(--background-image);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
     font-family: Degular;
-    color: white;
+    color:var(--font-color);
     height: 100vh;
     width: 100vw;
 }
@@ -34,6 +35,9 @@
     width: 150px;
 }
 
+.theme_button img {
+    cursor: pointer;
+}
 
 
 .headline1 {
@@ -70,7 +74,7 @@ button {
 
 @media screen and (max-width: 768px) {
     .hero_section {
-        background-image: url(../../assests/mobile_hero.gif);
+        background-image: var(--background-image-mble);
     }
 
     .logo img {
